--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -49,6 +49,219 @@
         <button class="w3-xxlarge" onclick="w3_open()">&#9776;</button>
     </div>
     <!-- sidebar  end -->
+
+    <section class="intro-section">
+        <div class="intro-video">
+            <video autoplay="" muted="" loop="" id="myVideo">
+                <source src="./assets/video/CreditsVideoAbstract.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div class="intro-gradient">
+            <img src="./assets/img/videoGradient.png" alt="">
+        </div>
+        <div class="intro-title">
+            <p>WHO ARE YOU</p>
+        </div>
+        <div class="scroll-down">
+            <p>Scroll down to continue</p>
+            <p>...</p>
+        </div>
+    </section>
+
+    <section class="second-section">
+        <div class="second-section-background">
+            <div class="left-text-side">
+                <p>
+                    Adoption may be the only<br>
+                    hope for becoming a family. It<br>
+                    is a key part of self-identity for<br>
+                    every adopted child.
+                </p>
+            </div>
+            <div class="right-text-side">
+                <p class="title">
+                    As children grow and develop,<br>
+                    the desire to know who they<br>
+                    are will grow as well.
+                </p>
+                <br>
+                <br>
+                <br>
+                <p class="text">
+                    No one should be denied the right to learn<br>
+                    the truth about their origins. However, telling<br>
+                    the truth is not always easy for parents.
+                </p>
+                <br>
+                <br>
+                <br>
+                <p class="text">
+                    They are afraid that one day the children<br>
+                    might prefer biological parents and lose<br>
+                    family ties with them. That’s why mothers<br>
+                    and fathers use their power to decide what<br>
+                    their children should know about<br>
+                    themselves. Is it a wise decision for building<br>
+                    a healthy family relationship?
+                </p>
+            </div>
+            <div class="audio">
+
+            </div>
+        </div>
+    </section>
+
+    <section class="third-section">
+        <div class="intro-video">
+            <video autoplay="" muted="" loop="" id="myVideo">
+                <source src="./assets/video/CreditsVideoAbstract.mp4" type="video/mp4">
+            </video>
+        </div>
+    </section>
+    <section class="forth-section">
+        <div class="forth-section-background">
+            <div class="text-container">
+                <p class="title">
+                    Adoption is a complicated<br>
+                    procedure which requires<br>
+                    lots of paperwork.
+                </p>
+                <br>
+                <p class="text">
+                    One of the documents made recently<br>
+                    mandatory is the certification of the<br>
+                    completion of a training organized by the<br>
+                    Social Service Agency.
+                </p>
+                <br>
+                <p class="text">
+                    During the trainings, potential parents<br>
+                    acquire useful skills and knowledge<br>
+                    regarding parenting.
+                </p>
+                <br>
+                <p class="text">
+                    It’s worth mentioning that all tips discussed<br>
+                    during workshops are advisory. Thus,<br>
+                    adoption-seekers decide themselves what<br>
+                    to take into account.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="fifth-section">
+        <div class="intro-video">
+            <video autoplay="" muted="" loop="" id="myVideo">
+                <source src="./assets/video/CreditsVideoAbstract.mp4" type="video/mp4">
+            </video>
+        </div>
+    </section>
+    <section class="sixth-section">
+        <div class="sixth-section-background">
+            <div class="text-container left">
+                <p class="title">
+                    <i>
+                        -Is truth worth telling?<br>
+                        -What if they find out?<br>
+                        -Why would we want to lie...<br>
+                        -What are we afraid of?<br>
+                    </i>
+                </p>
+                <br>
+                <p class="text">
+                    There are no obligations, and<br>
+                    opinions vary. However,<br>
+                    most participants agree that<br>
+                    concealing children’s identity<br>
+                    and making them <strong>live in a <br>
+                    frame is problematic. .</strong> 
+                </p>
+                <br>
+                <p class="text">
+                    One day this frame might<br>
+                    become fragile and break.
+                </p>
+            </div>
+            <div class="text-container right">
+                <p class="title">
+                    <i>
+                        Then a child will take<br>
+                        a step away...
+                    </i>
+                </p>
+                <br>
+                <p class="text">
+                    Telling children the truth about<br>
+                    adoption is unsurprisingly one<br>
+                    of the most debated issues at <br>
+                    the workshops.
+                </p>
+                <br>
+                <p class="text">
+                    The dilemma sparks multiple<br>
+                    questions and potential parents<br>
+                    share various perspectives.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="seventh-section">
+        <div class="seventh-section-background">
+            <div class="text-container">
+                <p class="title">
+                    International experience<br>
+                    - a ‘Home’ is not just a<br>
+                    place to live.
+                </p>
+                <br>
+                <p class="text">
+                    For children, being at ‘Home’ usually<br>
+                    means living with their family in an<br>
+                    environment that fosters a sense of<br>
+                    belonging, identity and origin.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="eighth-section">
+        <div class="eighth-section-background">
+            <div class="text-container left">
+                <p class="title">
+                    Recommendations From UNICEF
+                </p>
+                <br>
+                <div class="text-common-container">
+                    <div>
+                        <p class="text">
+                            The UNICEF Office of Research suggests some guides to<br>
+                            Good Practice of intercountry child adoption which<br>
+                            underline the importance of having qualified and ethical<br>
+                            personnel mandated to oversee the consent procedure.
+                        </p>
+                        <p class="text">
+                            Professionals who work with children on placement<br>
+                            decisions must understand and appreciate the child’s<br>
+                            history, and have a good knowledge of child development,<br>
+                            family systems assessment, the impact of trauma on<br>
+                            children and the effects of grief and loss.
+                        </p>
+                    </div>
+                    <div>   
+                        <p class="text">
+                            According to both the CRC (Convention on<br>
+                            the Rights of a Child) which is linked to the<br>
+                            best interests determination – and the 1993<br>
+                            Hague Convention, children who have the<br>
+                            maturity and capacity to present their<br>
+                            opinion on the determination of adoptability<br>
+                            should be given the chance to do so.
+                        </p>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
 </body>
 <script>
     function w3_open() {
@@ -61,6 +274,8 @@
         document.getElementById("mySidebar").style.display = "none";
         document.getElementById("myOverlay").style.display = "none";
     }
+
+
 
 </script>
 </html>
