--- a/mainPage.html
+++ b/mainPage.html
@@ -107,6 +107,10 @@
 
                 </div>
             </div>
+            <div class="children-on-road">
+           
+                <img src="./assets/img/c1.png" alt="">
+            </div>
         </div>
     </section>
 
@@ -472,6 +476,7 @@
                     <p class="text">Sophiko Pkhikidze</p>
                 </div>
             </div>
+            
         </div>
     </section>
 </body>
