--- a/mainPage.html
+++ b/mainPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,32 +13,47 @@
     <div class="sidenav-main-container">
         <div class="w3-sidebar w3-bar-block w3-animate-left" style="display:none;z-index:5" id="mySidebar">
             <div class="chapters activeChapter">
-                <h6>Chapter 1</h6>
-                <a href="">Introduction</a>
+               <a href="#chapter1">chapter 1</a>
             </div>
             <br>
             <div  class="chapters">
-                <h6>Chapter 2</h6>
-                <a href="">Stages of sleep</a>
+                <a href="#chapter2">chapter 2</a>
             </div>
             <br>
             <div class="chapters">
-                <h6>Chapter 3</h6>
-                <a href=""></a>Interview</a>
+                <a href="#chapter3">chapter 3</a>
             </div>
             <br>
             <div class="chapters">
-                <h6>Chapter 4</h6>
-                <a href="">Circadian rhythm</a>
+                <a href="#chapter4">chapter 4</a>
             </div>
             <br>
             <div class="chapters">
-                <h6>Chapter 5</h6>
-                <a href="">Effects of lack of sleep</a>
+                <a href="#chapter5">chapter 5</a>
             </div>
             <br>
             <div class="chapters">
-                <a href="">Credits</a>
+                <a href="#chapter6">chapter 6</a>
+            </div>
+            <br>
+            <div class="chapters">
+                <a href="#chapter7">chapter 7</a>
+            </div>
+            <br>
+            <div class="chapters">
+                <a href="#chapter8">chapter 8</a>
+            </div>
+            <br>
+            <div class="chapters">
+                <a href="#chapter9">chapter 9</a>
+            </div>
+            <br>
+            <div class="chapters">
+                <a href="3chapter10">chapter 10</a>
+            </div>
+            <br>
+            <div class="chapters">
+                <a href="3chapter11">chapter 11</a>
             </div>
 
             
@@ -50,7 +65,7 @@
     </div>
     <!-- sidebar  end -->
 
-    <section class="intro-section">
+    <section class="intro-section" id="chapter1">
         <div class="intro-video">
             <video autoplay="" muted="" loop="" id="myVideo">
                 <source src="./assets/video/CreditsVideoAbstract.mp4" type="video/mp4">
@@ -69,7 +84,7 @@
     </section>
 
 
-    <section class="section_number1">
+    <section class="section_number1"  id="chapter2">
         <div class="section_background background_number1">
             <div class="info-common-container">
                 <div class="left-container ">
@@ -114,7 +129,7 @@
         </div>
     </section>
 
-    <section class="video-section1">
+    <section class="video-section1"  id="chapter3">
         <div class="intro-video">
             <video autoplay="" muted="" loop="" id="myVideo">
                 <source src="./assets/video/CreditsVideoAbstract.mp4" type="video/mp4">
@@ -122,7 +137,7 @@
         </div>
     </section>
 
-    <section class="section_number2">
+    <section class="section_number2"  id="chapter4">
         <div class="section_background background_number2">
             <div class="info-common-container">
                 <div class="left-container">
@@ -153,10 +168,13 @@
                     </p>
                 </div>
             </div>
+            <div class="children-on-road2">
+                <img src="./assets/img/c3.png" alt="">
+            </div>
         </div>
     </section>
 
-    <section class="video-section2">
+    <section class="video-section2"  id="chapter5">
         <div class="intro-video">
             <video autoplay="" muted="" loop="" id="myVideo">
                 <source src="./assets/video/CreditsVideoAbstract.mp4" type="video/mp4">
@@ -164,7 +182,7 @@
         </div>
     </section>
 
-    <section class="section_number3">
+    <section class="section_number3"  id="chapter6">
         <div class="section_background background_number3">
             <div class="info-common-container">
                 <div class="left-container ">
@@ -218,11 +236,16 @@
                         share various perspectives.
                     </p>
             </div>
+       
+            <div class="children-on-road2">
+                <img src="./assets/img/c3.png" alt="">
+            </div>
+        </div>
         </div>
     </section>
 
 
-    <section class="section_number4">
+    <section class="section_number4" id="chapter7">
         <div class="section_background background_number4">
             <div class="info-common-container">
                 <div class="left-container">
@@ -242,10 +265,13 @@
                     </p>
                 </div>
             </div>
+            <div class="children-on-road3">
+                <img src="./assets/img/c2.png" alt="">
+            </div>
         </div>
     </section>
 
-    <section class="section_number5">
+    <section class="section_number5" id="chapter8">
         <div class="section_background background_number5">
             <div class="info-common-container">
                 <div class="left-container">
@@ -287,7 +313,7 @@
         </div>
     </section>
 
-    <section class="section_number6">
+    <section class="section_number6" id="chapter9">
         <div class="section_background background_number6">
             <div class="info-common-container">
                 <div class="left-container">
@@ -335,7 +361,7 @@
         </div>
     </section>
 
-    <section class="section_number7">
+    <section class="section_number7" id="chapter10">
         <div class="section_background background_number7">
             <div class="info-common-container">
                 <div class="left-container">
@@ -399,7 +425,7 @@
         </div>
     </section>
 
-    <section class="section_number8">
+    <section class="section_number8" id="chapter11">
         <div class="section_background background_number7">
             <div class="statistic-common-container">
                 <div>
@@ -453,6 +479,9 @@
                     </p>
                 </div>
             </div>
+        </div>
+        <div class="children-on-road4">
+            <img src="./assets/img/c4.png" alt="">
         </div>
     </section>
 
